# agentprompt-py

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/agentprompt/: __init__.py  core.py
tests/: test_core.py
